# python_web_12.V1

./: .env  docker-compose.yml  main.py  pyproject.toml  readmy.md
alembic/: env.py
alembic/versions/: 1eba5f21496e_init.py  a3c0dba3fe7f_init.py
docs/source/: conf.py  index.rst
seeds/: new_data.py
src/admin/: emails.py  repo_admin.py  roles.py  route_admin.py  schemas_admin.py
src/admin/templates/: verify_email.html
src/auth/: auth.py  models.py  password_utils.py  repo_auth.py  route_auth.py  schema_auth.py  utils.py
src/conf/: config.ini  config.py
src/contacts/: models.py  repo_contacts.py  route_contacts.py  schema_contacts.py
src/database/: db.py
tests/: confi_test.py  test_auth.py  test_contacts.py  unit_repo_contacts.py
