[tool.poetry]
name = "python-web-12-v1"
version = "0.1.0"
description = ""
authors = ["BogdanKozlov35 <bkozlov35@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_12"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
faker = "^26.0.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
uvicorn = "^0.30.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
fastapi-mail = "^1.4.1"
bcrypt = "3.1.7"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.41.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}


[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
